--- a/ToDo.html
+++ b/ToDo.html
@@ -2,9 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width", initial-scale="1.0">
+        <link rel="stylesheet" href="ToDo.css">
         <title>To Do App</title>
     </head>
     <body>
-        
+        <h1>To Do List</h1>
+        <div class="container"> 
+            <input id="inputField" type="text"><button id="To Do">+</button>
+            <div class="to-dos" id="ToDoContainer">
+            </div>
+        </div>
+        <script src="Todo.jss"> </script>
     </body>
 </html>
