--- a/ToDo.html
+++ b/ToDo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width", initial-scale="1.0">
+        <meta name="viewport" initial-scale="1.0">
         <link rel="stylesheet" href="ToDo.css">
         <title>To Do App</title>
     </head>
@@ -13,6 +13,6 @@
             <div class="to-dos" id="ToDoContainer">
             </div>
         </div>
-        <script src="Todo.jss"> </script>
+        <script src="Todo.js"> </script>
     </body>
 </html>
